css/style.css
:root {

}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {

}

.card-container {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    grid-template-rows: 1fr;
    gap: 20px;
    padding: 2rem;
}

.card {
    display: flex;
    flex-direction: column;
    align-items: center;
    background: #FFF;
    border-radius: 2px;
    padding: 1rem;

    & h2 {
        text-shadow: 4px 2px 6px rgba(100, 15, 255, 0.8);
    }

    & img {
        width: 100%;
    }
}

button {
    background-color: #DE0058;
    height: 35px;
    width: 110px;
    color: #FFF;
}

.lato-small {
    font-family: "Lato", sans-serif;
    font-weight: 400;
    font-style: normal;
    font-size: 14px;
}

.lato-large {
    font-family: "Lato", sans-serif;
    font-weight: 800;
    font-style: normal;
    font-size: 24px;
}

dialog::backdrop {
    background: hsla(50, 100%, 50%, 0.7);
}

